	  the current pattern.

	* Added capability to import the patterns from another song.

	* Added "volume zoom" capability

gneutronica 0.25

	* Added ability to export song to MIDI file.

gneutronica 0.26

	* Fixed problem that if all measures were deleted, segfault could result
	  (kind of a hack, just prevented user from deleting all measures.)

	* Fixed a memory leak

	* Now can insert and delete patterns.

gneutronica 0.27

	* Can now remap a song or a pattern's drumkit to another drumkit using 
	  General MIDI as a lowest common denominator.  (Works, sorta kinda... 
	  better than nothing.)

	* added experimental user interface changes automag and autocrunch.
	  They don't really work as well as I was hoping they would, esp.
	  autocrunch.  Automag by itself is alright.

	* Deleting and inserting measures now adjusts tempo changes 
	  accordingly. (bugfix)

	* Starts off with windows maximized.  (Use alt-tab to switch between windows, 
	  or whatever method your window manager provides, or unmaximize, or start 
	  it with the -m option if you don't like the default maximizing behavior.)

	* Some hotkey support. 'q' quits.

gneutronica 0.28

	* Added hotkeys 'c', 'p', 'x', 'P', and 'X' in the pattern window.
	  These are all designed for the purpose of changing an instrument.
          (e.g. you like the pattern, but want to try a different snare drum
           sound.  These are best used with automag and volume zoom enabled
           (leave autocrunch turned off.))

	  c - marks current instrument for copying.
	  p - (lowercase p) copies (pastes) previously marked instrument's hits
              into current instrument in the current pattern.
	  x - (lowercase x) clears current instrument (like the 'Clear' button by each instrument).
	  P - (shift-p) copies (pastes) previously marked instruments hits
              into current instrument FOR THE ENTIRE SONG.
	  X - (shift-x) clears current instrument FOR THE ENTIRE SONG.
